--- a/website/themes/vt6/layouts/partials/header.html
+++ b/website/themes/vt6/layouts/partials/header.html
@@ -19,6 +19,6 @@
 <body>
   <header>
     <h1>
-      <img alt="VT6" src="/img/logo-dark-wide.png" /><div><span>A modern protocol for virtual terminals</span></div>
+      <a href="/"><img alt="VT6" src="/img/logo-dark-wide.png" /></a><div><span>A modern protocol for virtual terminals</span></div>
     </h1>
   </header>
