core0: define message stream, invalid messages; lay out remaining TOC

--- a/website/themes/vt6/static/css/vt6.css
+++ b/website/themes/vt6/static/css/vt6.css
@@ -63,7 +63,7 @@ main {
   padding: 0 1rem;
 }
 
-main p, main ul {
+main p, main ul, main ol {
     font-family: "Source Serif Pro", serif;
     hyphens: auto;
     -ms-hyphens: auto;
