make draft status more prominent

--- a/website/themes/vt6/layouts/_default/single.html
+++ b/website/themes/vt6/layouts/_default/single.html
@@ -1,5 +1,10 @@
 {{ partial "header" . }}
+{{ if in (findRE "/draft/" .Permalink) "/draft/" }}
+<div id="draft">Draft</div>
+<main class="draft">
+{{ else }}
 <main>
+{{ end }}
   {{ .Content }}
 </main>
 {{ partial "footer" . }}
