--- a/website/themes/vt6/static/css/vt6.css
+++ b/website/themes/vt6/static/css/vt6.css
@@ -64,14 +64,14 @@ main {
 }
 
 main p, main ul, main ol {
-    font-family: "Source Serif Pro", serif;
-    hyphens: auto;
-    -ms-hyphens: auto;
-    -webkit-hyphens: auto;
-    text-align: justify;
+  font-family: "Source Serif Pro", serif;
+  hyphens: auto;
+  -ms-hyphens: auto;
+  -webkit-hyphens: auto;
+  text-align: justify;
 }
 main code {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 main h1 {
@@ -96,4 +96,20 @@ main pre {
   padding: 0.5rem;
   max-width: 100%;
   overflow-x: auto;
+}
+
+#draft {
+  position: fixed;
+  top: 14.5rem;
+  left: -6.5rem;
+  width: 30rem;
+  height: 5rem;
+  background: #600;
+  line-height: 5rem;
+  font-size: 2.5rem;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  transform: rotate(-45deg);
+  transform-origin: left top;
 }
