--- a/website/themes/vt6/static/css/vt6.css
+++ b/website/themes/vt6/static/css/vt6.css
@@ -16,6 +16,7 @@ header {
   margin-left: calc(50vw - 400px);
   height: 96px;
   position: relative;
+  z-index: 1;
 }
 @media(max-width: 800px) {
   header {
@@ -100,16 +101,28 @@ main pre {
 
 #draft {
   position: fixed;
-  top: 14.5rem;
-  left: -6.5rem;
-  width: 30rem;
+  top: 100vh;
+  left: 0;
+  width: calc(100vh - 96px);
   height: 5rem;
+  z-index: 0;
   background: #600;
   line-height: 5rem;
   font-size: 2.5rem;
   text-align: center;
   font-weight: bold;
   color: white;
-  transform: rotate(-45deg);
+  transform: rotate(-90deg);
   transform-origin: left top;
+}
+@media(max-width: 1000px) {
+  #draft {
+    height: 3rem;
+    line-height: 3rem;
+    font-size: 2rem;
+  }
+  main.draft {
+    max-width: 100%;
+    padding-left: 4rem;
+  }
 }
