--- a/website/themes/vt6/static/css/vt6.css
+++ b/website/themes/vt6/static/css/vt6.css
@@ -103,9 +103,11 @@ main pre {
   position: fixed;
   top: 100vh;
   left: 0;
-  width: calc(100vh - 96px);
+  width: 100vh;
   height: 5rem;
   z-index: 0;
+  box-sizing: border-box;
+  padding-right: 96px;
   background: #600;
   line-height: 5rem;
   font-size: 2.5rem;
