adjust URL layout
- groups versions of a single module
- URL does not change when a standard goes from "draft" to "released"

--- a/website/themes/vt6/layouts/_default/single.html
+++ b/website/themes/vt6/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ partial "header" . }}
-{{ if in (findRE "/draft/" .Permalink) "/draft/" }}
+{{ if .Params.x_vt6_draft }}
 <div id="draft">Draft</div>
 <main class="draft">
 {{ else }}
