--- a/website/themes/vt6/layouts/index.html
+++ b/website/themes/vt6/layouts/index.html
@@ -4,13 +4,21 @@
   <p>The <strong>VT6 project</strong>, though still in its earliest stages, is working towards a modern protocol for virtual terminals, which, among other things, runs almost entirely in userspace and provides a modular basis on which to serve both legacy clients and forward-looking terminals that want to provide modern capabilities to applications.</p>
   <p>Development is taking place on <a href="https://github.com/vt6/vt6">GitHub</a>.</p>
   <h2>Specifications</h2>
+  <p>Specifications without a version are non-normative living documents. Specifications with a version are frozen once they appear in this list.</p>
   <ul>
-  {{ range .Data.Pages }}
+  {{ range .Data.Pages }}{{ if (not .Params.x_vt6_draft) }}
     <li>
       <a href="{{.Permalink}}">{{.Title}} &mdash; {{.Description}}</a>
-      {{- if in (findRE "/draft/" .Permalink) "/draft/" }} <em>(Draft)</em>{{ end -}}
     </li>
-  {{ end }}
+  {{ end }}{{ end }}
+  </ul>
+  <h2>Drafts</h2>
+  <ul>
+  {{ range .Data.Pages }}{{ if .Params.x_vt6_draft }}
+    <li>
+      <a href="{{.Permalink}}">{{.Title}} &mdash; {{.Description}}</a>
+    </li>
+  {{ end }}{{ end }}
   </ul>
 </main>
 {{ partial "footer" . }}
