tone down the bgcolor on the rationale boxes

--- a/website/static/vt6.css
+++ b/website/static/vt6.css
@@ -123,7 +123,7 @@ main > :not(pre) code {
 
 main p.rationale {
   border: 1px dashed #222;
-  background: #CCC;
+  background: #EEE;
   padding: 0.5rem;
 }
 
