fix font size of <code> inside headings

--- a/website/static/vt6.css
+++ b/website/static/vt6.css
@@ -259,7 +259,7 @@ main > :not(pre) code {
   white-space: nowrap; /* do not break lines inside inline code, only in long snippets */
   border: 1px dashed #AAA;
   padding: 3px 0;
-  font-size: 0.85rem;
+  font-size: 85%;
 }
 
 main p.rationale {
